# Alice_llm_lab

./: README.md
alice-mini-llm/: Execution_Guide.md  Project_Report.md  pyproject.toml  requirements.txt
alice-mini-llm/alice_mini_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alice-mini-llm/app/: streamlit_app.py
alice-mini-llm/data/: texts.db
alice-mini-llm/data/processed/: alice_clean.txt  chunks.jsonl  train.txt  val.txt
alice-mini-llm/outputs/checkpoints/: model.pt  model_best.pt  model_latest.pt
alice-mini-llm/src/: config.py  inference.py
alice-mini-llm/src/data_prep/: dataset_builder.py
alice-mini-llm/src/eval/: metrics.py
alice-mini-llm/src/model/: generate.py  train.py  transformer.py
alice-mini-llm/src/rag/: rag_generate.py  retriever.py
