[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alice-mini-llm"
version = "0.1.0"
description = "A tiny transformer model trained on Alice in Wonderland"
authors = [
  { name = "Alice Mini User", email = "user@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
